--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <title>PWATodo</title>
-    <base href="/"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <style>
       /* https://codepen.io/mrrocks/pen/EiplA */
       html,
@@ -118,22 +118,15 @@
         }
       }
     </style>
-    <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
-</head>
+    <link rel="manifest" href="manifest.webmanifest" />
+    <meta name="theme-color" content="#1976d2" />
+  </head>
   <body>
     <noscript>
       <h3 style="color:#3f51b5; font-family: Helvetica; margin: 2rem;">
         Aplicativo indisponível sem javascript.
       </h3>
     </noscript>
-    <app-root>
-      <nav style="background-color:#3f51b5; height: 56px; width: 100%"></nav>
-      <div class="contentChart">
-        <svg class="spinner" width="65px" height="65px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
-          <circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle>
-        </svg>
-      </div>
-    </app-root>
+    <app-root> </app-root>
   </body>
 </html>
